# factorio-wizard

./: .gitignore  README.md  factorio-wizard.cabal  factory_planner.py  science_planner.py
data/: additional-data.yaml  configuration.yaml  configuration_small.yaml  recipes.15.31.yaml
helpers/: fix_recipes.py
src/: Main.hs
src/Factorio/: Factory.hs  Optimization.hs
src/Factorio/Data/: Config.hs  Env.hs  Recipes.hs
src/Factorio/Wizard/: Factory.hs
