name:                factorio-wizard
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/factorio-wizard#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable factorio-wizard
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Factorio.Data.Config,
                       Factorio.Data.Recipes,
                       Factorio.Data.Env,
                       Factorio.Wizard.Factory
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       yaml >= 0.8,
                       aeson >= 1.1,
                       cmdargs >= 0.10,
                       containers >= 0.5,
                       mtl >= 2.2,
                       bytestring >= 0.10,
                       text >= 1.2